--- a/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/activities/home.jst.ejs
@@ -5,7 +5,7 @@
 		<h3> Welcome Home <%= name %></h3>
 	</header>
 	<div class="subtitle">
-		<h3> Activity duration </h3>
+		<h3> How much time do you have?</h3>
 	</div>
 	<section> 
 		<input class="knob" data-width="100" data-displayinput="true" value="0" height="100" >
@@ -13,8 +13,17 @@
 			<button class='go-btn'>GO</button>
 		</div>
 	</section>
-	<footer>
-		<a href='tempo#interests'>Toggle interests</a>	
-		<br>
-	</footer>
+</div>
+ <div class='interestContainer'>
+ 	<header> 
+ 		<h4 id='interestsTitle' style='color: #1abc9c;'> Interest List </h4> 
+ 	</header>
+	<ul>
+	<% _.each(interests, function(interest, i) { %> 
+		<li>
+			<input type=checkbox name= "<%= interest%>"  id="interest-<%= i%>" checked >
+			<%= interest %>
+		</li>
+	<% }); %>
+	</ul>
 </div>
