--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -108,7 +108,8 @@ $greenText: rgb(104, 187, 108);
     }
 
     footer {
-      background-color: #f5f5f5;
+      /*background-color: #f5f5f5;*/
+      background-color: white;
       border-bottom: 3px solid $greenBackground;
       border-bottom-right-radius: 2px;
       border-bottom-left-radius: 2px;
