--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,15 +158,15 @@ $buttonFontColor: #ECF0F1;
 	}
 
 	.home-wrapper header h3{
+		font-size: 35px;
 		color: #fff;
 		margin-bottom: 0;
 	}
 
 	.home-wrapper .subtitle {
 		position: relative;
-		top: 15%;
-		height: 7%;
-		border-bottom: 1px solid #89C4F4;
+		top: 12%;
+		height: 4%;
 		/*border-bottom: 1px solid #ddd;*/
 
 		h3 {
@@ -178,9 +178,9 @@ $buttonFontColor: #ECF0F1;
 	.home-wrapper section {
 		border-bottom: 1px solid $containerHeaderColor;
 		position: absolute;
-		top: 25%;
+		top: 20%;
 		width: 100%;
-		height: 38%;
+		height: 42%;
 
 		h3 {
 			color: #e74c3c;
